--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
   build:
     commands:
       - "echo Copy files to S3 bucket"
-      - "aws s3 cp index.html s3://tom-dane --acl public-read"
+      - 'aws s3 sync . s3://tom-dane --delete --exclude ".git*"'
   post_build:
     commands:
       - "echo Clear previous version from cache"
