--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,13 +2,16 @@ version: 0.1
 phases:
   install:
     commands:
+      - "echo Start build and deployment"
       - "echo Download from GitHub"
   build:
     commands:
-      - "echo Upload to S3"
+      - "echo Copy files to S3 bucket"
+      - "aws s3 cp index.html s3://tom-dane --acl public-read"
   post_build:
     commands:
-      - "aws s3 cp index.html s3://tom-dane --acl public-read"
+      - "echo Clear previous version from cache"
+      - 'aws cloudfront create-invalidation --distribution-id E32IQDBZLB1XOB --paths /*'
 artifacts:
   files:
     - "**/*"
