--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,8 +8,8 @@ phases:
       - "echo Upload to S3"
   post_build:
     commands:
-      - 'aws s3 cp "index.html" "s3://tom-dane" --delete --acl "public-read"'
-artifacts:
+      - "aws s3 cp index.html s3://tom-dane"
+  artifacts:
   base-directory: public
   files:
     - "**/*"
